src/components/note-taking/textEditor.css
.superFancyBlockquote {
  color: #999;
  background: #fff;
  font-family: "Hoefler Text", Georgia, serif;
  font-style: italic;
  border-left: 2px solid #999;
  padding-left: 10px;
}

.codeBlock {
  font-family: fira-code, monospace;
  font-size: inherit;
  background: #ffeff0;
  font-style: italic;
  word-wrap: normal;
  word-wrap: break-word;
  box-decoration-break: slice;
  padding: 0.3rem 2rem;
  border-radius: 0.2rem;
}

.leftAlign {
  text-align: left;
}
.rightAlign {
  text-align: right;
}
.centerAlign {
  text-align: center;
}
.justifyAlign {
  text-align: justify;
}

.placeHolder {
    text-align: center;
}

.editor-button, .editor-button:hover, .editor-button-dark, .editor-button-dark:hover {
  background-color: inherit;
  color: inherit;
}

.editor-button-dark > img, .editor-button-dark > a {
  background-color: inherit;
  color: inherit;
  filter: brightness(0) invert(1);
}

.editor-button-dark > li {
  z-index: 999; /* ensure dropdown is always above textbox */
  position: relative;
  background-color: #121212;
}

.editor-button > li {
  z-index: 999; /* ensure dropdown is always above textbox */
  position: relative;
  background-color: #EEEEEE;
}

.editor-button > li.rdw-dropdownoption-highlighted {
  background-color: rgb(192, 192, 192) !important;
}

.editor-button-dark > li.rdw-dropdownoption-highlighted {
  background-color: rgb(64, 64, 64) !important;
}

.editor-popup {
  z-index: 999;
  background-color: #EEEEEE;
}

.editor-popup-dark input {
  border: 1px solid white;
  margin: 1px;
  background-color: inherit;
  color: white;
  font-family: inherit;
}

.editor-popup input {
  border: 1px solid black;
  margin: 1px;
  font-family: inherit;
}

.editor-popup-dark {
  z-index: 999; /* ensure popup is always above textbox */
  background-color: #121212;
}

.rdw-colorpicker-modal-options {
  overflow-x: hidden;
}
 
.rdw-colorpicker-option {
  overflow: hidden;
  border: 1px dashed gray;
}

.rdw-colorpicker-cube {
  border: none;
}

